force-app/main/default/objects/Opportunity_Partner__c/Opportunity_Partner__c.object-meta.xml
<CustomObject>
    <description>Junction object to tie Accounts to an Opportunity</description>
    <label>Opportunity Partner</label>
    <nameField>
        <displayFormat>OP - {0000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>