force-app/main/default/objects/Opportunity_Partner__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>if(  Partner_Account__r.HQ_Account_Check_if_HQ__c = true ,Partner_Account__r.Owner.FirstName &amp; &quot; &quot;&amp;Partner_Account__r.Owner.LastName ,  Partner_Account__r.Parent.Owner.FirstName &amp; &quot; &quot;&amp;Partner_Account__r.Parent.Owner.LastName )</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>