force-app/main/default/objects/Opportunity_Partner__c/fields/AV_Certified__c.field-meta.xml
<CustomField>
    <fullName>AV_Certified__c</fullName>
    <formula>Partner_Account__r.AV_Solutions_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AV Certified</label>
    <type>Checkbox</type>
</CustomField>