force-app/main/default/objects/Opportunity_Partner__c/fields/AV_Solutions_Partner__c.field-meta.xml
<CustomField>
    <fullName>AV_Solutions_Partner__c</fullName>
    <formula>text(Partner_Account__r.Industry) == &apos;AV Solution&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AV Solutions Partner</label>
    <type>Checkbox</type>
</CustomField>