force-app/main/default/objects/Opportunity_Partner__c/fields/City_and_State__c.field-meta.xml
<CustomField>
    <fullName>City_and_State__c</fullName>
    <formula>if( text(Partner_Type__c )=&quot;Distributor&quot;,&quot;&quot;, 

If( Partner_Account__r.BillingState= &quot;All&quot;, &quot;All&quot;,
Partner_Account__r.BillingCity &amp; &quot;, &quot;&amp; Partner_Account__r.BillingState ))</formula>
    <label>Reseller City and State</label>
    <type>Text</type>
</CustomField>