force-app/main/default/objects/Opportunity_Partner__c/fields/City_State__c.field-meta.xml
<CustomField>
    <fullName>City_State__c</fullName>
    <formula>Partner_Account__r.BillingCity &amp;&quot; &quot;&amp; Partner_Account__r.BillingState</formula>
    <label>City &amp; State</label>
    <type>Text</type>
</CustomField>