force-app/main/default/objects/Opportunity_Partner__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>if( text(Partner_Type__c )=&quot;Distributor&quot;,&quot;&quot;, Partner_Account__r.Name )</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>