force-app/main/default/objects/Opportunity_Partner__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>