force-app/main/default/objects/Opportunity_Partner__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Name of contact at the Reseller, End User, or Distributor</description>
    <inlineHelpText>Name of contact at the Reseller, End User, or Distributor</inlineHelpText>
    <label>Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>