force-app/main/default/objects/Opportunity_Partner__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>$User.FirstName &amp;&quot; &quot;&amp;$User.LastName</formula>
    <label>Current User</label>
    <type>Text</type>
</CustomField>