force-app/main/default/objects/Opportunity_Partner__c/fields/Email_List__c.field-meta.xml
<CustomField>
    <fullName>Email_List__c</fullName>
    <formula>Partner_Account__r.Spa_Email_List__c</formula>
    <label>Email List</label>
    <type>Text</type>
</CustomField>