force-app/main/default/objects/Opportunity_Partner__c/fields/Local_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Local_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Partners (Local Partner Account)</relationshipLabel>
    <relationshipName>Opportunity_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>