force-app/main/default/objects/Opportunity_Partner__c/fields/Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opp_Amount__c</fullName>
    <label>Opp Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>