force-app/main/default/objects/Opportunity_Partner__c/fields/Opp_Probability__c.field-meta.xml
<CustomField>
    <fullName>Opp_Probability__c</fullName>
    <formula>Opportunity__r.Probability</formula>
    <label>Opp Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>