force-app/main/default/objects/Opportunity_Partner__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <inlineHelpText>Stage Name from Opportunity.  This is here to accommodate a Workflow rule that notifies the Partner Account Owner when a stage changes.</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>