force-app/main/default/objects/Opportunity_Partner__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <formula>if( Account_Owner__c =  Current_User__c ,  true ,
if(and(Account_Owner__c= &quot;Steve Henriksen&quot;, Current_User__c= &quot;Bert Tisch&quot;),True,
 false))</formula>
    <label>Owner = User</label>
    <type>Checkbox</type>
</CustomField>