force-app/main/default/objects/Opportunity_Partner__c/fields/Owneranduserid__c.field-meta.xml
<CustomField>
    <fullName>Owneranduserid__c</fullName>
    <formula>if( $User.Id =  Partner_Account__r.Owner.Id ,True,False)</formula>
    <label>Owneranduserid</label>
    <type>Checkbox</type>
</CustomField>