force-app/main/default/objects/Opportunity_Partner__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>Partner_Account__r.ParentAccount__c</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>