force-app/main/default/objects/Opportunity_Partner__c/fields/Parent_Reseller_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Reseller_Owner__c</fullName>
    <formula>Partner_Account__r.Parent_Account_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Reseller Owner</label>
    <type>Text</type>
</CustomField>