force-app/main/default/objects/Opportunity_Partner__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <label>Partner</label>
    <type>Text</type>
</CustomField>