force-app/main/default/objects/Opportunity_Partner__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <inlineHelpText>Lookup and select the Account that is a partner on this Opportunity</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Opportunites</relationshipLabel>
    <relationshipName>Opportunity_Partners</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>