force-app/main/default/objects/Opportunity_Partner__c/fields/Partner_Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Site__c</fullName>
    <formula>Partner_Account__r.Site</formula>
    <label>Partner Account Site</label>
    <type>Text</type>
</CustomField>