force-app/main/default/objects/Opportunity_Partner__c/fields/Partner_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Type__c</fullName>
    <formula>TEXT(  Partner_Account__r.Type  )</formula>
    <label>Partner Account Type</label>
    <type>Text</type>
</CustomField>