force-app/main/default/objects/Opportunity_Partner__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <inlineHelpText>Select the type of Partner</inlineHelpText>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Reseller / VAR</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>