force-app/main/default/objects/Opportunity_Partner__c/fields/PartnerAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountOwner__c</fullName>
    <formula>Partner_Account__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PartnerAccountOwner</label>
    <type>Text</type>
</CustomField>