force-app/main/default/objects/Opportunity_Partner__c/fields/PartnerCountofContacts__c.field-meta.xml
<CustomField>
    <fullName>PartnerCountofContacts__c</fullName>
    <formula>Partner_Account__r.CountofContacts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PartnerCountofContacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>