force-app/main/default/objects/Opportunity_Partner__c/fields/Reseller_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>