force-app/main/default/objects/Opportunity_Partner__c/fields/Reseller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Partners</relationshipLabel>
    <relationshipName>Opportunity_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>