force-app/main/default/objects/Opportunity_Partner__c/fields/Reseller_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Email__c</fullName>
    <formula>if(text(Partner_Type__c )=&quot;Distributor&quot;, &quot;&quot;,  Contact_Email__c )</formula>
    <label>Reseller Contact Email</label>
    <type>Text</type>
</CustomField>