force-app/main/default/objects/Opportunity_Partner__c/fields/Reseller_Type__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Type__c</fullName>
    <formula>Partner_Account__r.Reseller_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Type</label>
    <type>Text</type>
</CustomField>