force-app/main/default/objects/Opportunity_Partner__c/fields/ResellerContactName__c.field-meta.xml
<CustomField>
    <fullName>ResellerContactName__c</fullName>
    <formula>if(text(Partner_Type__c )=&quot;Distributor&quot;, &quot;&quot;, 
if(isblank(Contact_Name__c), Reseller_Contact__r.FirstName&amp;&apos; &apos;&amp; Reseller_Contact__r.FirstName, Contact_Name__c))</formula>
    <label>Reseller Contact Name</label>
    <type>Text</type>
</CustomField>