force-app/main/default/objects/Opportunity_Partner__c/fields/ResellerSpaEmail__c.field-meta.xml
<CustomField>
    <fullName>ResellerSpaEmail__c</fullName>
    <description>This field is filled out during the Spa Approval Email process and will put email address of the current requestor of the email</description>
    <label>ResellerSpa Email</label>
    <type>Email</type>
</CustomField>