force-app/main/default/objects/Opportunity_Partner__c/fields/Roll_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Roll_Out_Date__c</fullName>
    <formula>Opportunity__r.Roll_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roll Out Date</label>
    <type>Date</type>
</CustomField>