force-app/main/default/objects/Opportunity_Partner__c/fields/Spa_Active__c.field-meta.xml
<CustomField>
    <fullName>Spa_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spa Active</label>
    <type>Checkbox</type>
</CustomField>