force-app/main/default/objects/Opportunity_Partner__c/fields/Spa_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Spa_Email_Recipient__c</fullName>
    <formula>ISPICKVAL(Partner_Type__c,&apos;Reseller / VAR&apos;)||ISPICKVAL(Partner_Type__c, &apos;End User Contact&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Email Recipient</label>
    <type>Checkbox</type>
</CustomField>