force-app/main/default/objects/Opportunity_Partner__c/validationRules/Opporunity_Partner_Does_not_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Opporunity_Partner_Does_not_Exist</fullName>
    <active>false</active>
    <errorConditionFormula>VLOOKUP(   $ObjectType.Opportunity_Partner__c.Fields.Partner_Account__c   ,   $ObjectType.Opportunity_Partner__c.Fields.Name  ,   Partner_Account__c ) =  Partner_Account__c</errorConditionFormula>
    <errorMessage>Duplicate opp account partner</errorMessage>
</ValidationRule>