force-app/main/default/objects/Opportunity_Partner__c/validationRules/Partner_Account_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Account_Types</fullName>
    <active>true</active>
    <description>Ensures that only Distributors can be added as Distribution and Resellers as Resellers</description>
    <errorConditionFormula>text(Partner_Account__r.Type) != &apos;Distributor&apos;
&amp;&amp; text(Partner_Type__c) = &apos;Distributor&apos;
&amp;&amp;
Partner_Account__r.Name != &apos;Data Visual Marketing&apos;</errorConditionFormula>
    <errorMessage>Only Accounts that have a type of Distributor can be added as Opportunity Partners as Distributors</errorMessage>
</ValidationRule>