force-app/main/default/objects/Opportunity_Partner__c/listViews/My_Open_SpaRequests_National.listView-meta.xml
<ListView>
    <fullName>My_Open_SpaRequests_National</fullName>
    <columns>Opportunity__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Amount__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>Reseller / VAR</value>
    </filters>
    <label>2 NA My Open Spa Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>