force-app/main/default/objects/Opportunity_Partner__c/listViews/SPGMy_Open_Opportunities_National.listView-meta.xml
<ListView>
    <fullName>SPGMy_Open_Opportunities_National</fullName>
    <columns>Opportunity__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Opportunity_Created_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>Reseller / VAR</value>
    </filters>
    <label>4 SPG My Open Opportunities</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>